--- a/.github/workflows/generate-readmes.yml
+++ b/.github/workflows/generate-readmes.yml
@@ -1,8 +1,8 @@
 name: Generate Sub-READMEs
 
 on:
-  workflow_dispatch:
-  workflow_run:
+  workflow_dispatch: # 允许手动触发
+  workflow_run:      # 当更新文件的那个工作流完成后自动运行
     workflows: ["Update File Test"]
     types:
       - completed
@@ -34,14 +34,12 @@ jobs:
           import os
           import urllib.parse
           import yaml
-          import re
-          
-          # --- 0. 核心修复：让 PyYAML 忽略自定义标签 ---
-          yaml.add_multi_constructor("!", lambda loader, suffix, node: None, Loader=yaml.SafeLoader)
+          import datetime
 
           # --- 配置区域 ---
           REPO_URL = "https://github.com/${{ github.repository }}/blob/main"
           
+          # 文件夹显示名称映射
           DIR_MAP = {
               "Official_Examples": "Mihomo 官方示例 (Official)",
               "General_Config": "通用进阶配置 (General Config)",
@@ -49,6 +47,7 @@ jobs:
               "Mobile_Modules": "Android 手机模块 (Mobile Modules)"
           }
 
+          # 忽略的文件
           IGNORE_DIRS = [".git", ".github"]
           IGNORE_FILES = ["README.md", "LICENSE", "release_body.md"]
 
@@ -70,109 +69,59 @@ jobs:
                   return f"{size/1024:.1f} KB"
               except: return "Unknown"
 
-          def read_file_content(file_path):
-              """尝试使用多种编码读取文件，并处理 Tab 缩进问题"""
-              content = ""
-              try:
-                  with open(file_path, "r", encoding="utf-8") as f:
-                      content = f.read()
-              except UnicodeDecodeError:
-                  try:
-                      with open(file_path, "r", encoding="gb18030", errors="ignore") as f:
-                          content = f.read()
-                  except Exception:
-                      return None
-              
-              if "\t" in content:
-                  content = content.replace("\t", "  ")
-              
-              return content
-
           def analyze_single_config(file_path):
               """解析单个 YAML 并返回结构化数据"""
               try:
-                  raw_content = read_file_content(file_path)
-                  if not raw_content:
-                      return None
-
-                  data = yaml.safe_load(raw_content)
-                  
-                  if not isinstance(data, dict):
-                      return None
-
+                  with open(file_path, "r", encoding="utf-8") as f:
+                      data = yaml.safe_load(f)
+                      
+                  # 基础指标提取
                   info = {}
-                  
-                  # 1. 基础信息
+                  info["mixed_port"] = safe_get(data, ["mixed-port"], "❌")
+                  info["http_port"] = safe_get(data, ["port"], "❌")
                   info["mode"] = safe_get(data, ["mode"], "Rule")
                   info["ipv6"] = "✅" if str(safe_get(data, ["ipv6"])).lower() == "true" else "🚫"
                   info["allow_lan"] = "✅" if str(safe_get(data, ["allow-lan"])).lower() == "true" else "🚫"
-                  info["tun"] = "✅ 开启" if safe_get(data, ["tun", "enable"], False) else "🚫 关闭"
-
-                  # 2. 端口信息提取
-                  info["port_mixed"] = safe_get(data, ["mixed-port"], "-")
-                  info["port_http"] = safe_get(data, ["port"], "-")
-                  info["port_socks"] = safe_get(data, ["socks-port"], "-")
-                  info["port_redir"] = safe_get(data, ["redir-port"], "-")
-                  info["port_tproxy"] = safe_get(data, ["tproxy-port"], "-")
-                  info["port_ctrl"] = safe_get(data, ["external-controller"], "-")
                   
-                  info["listeners_raw"] = []
-                  listeners = data.get("listeners", [])
-                  if listeners and isinstance(listeners, list):
-                      for l in listeners:
-                          if isinstance(l, dict):
-                              name = l.get("name", "Unknown")
-                              port = l.get("port", "?")
-                              l_type = l.get("type", "mixed")
-                              info["listeners_raw"].append(f"| 👂 {name} | {port} | {l_type} |")
-
-                  info["ports_display"] = []
-                  if info["port_mixed"] != "-": info["ports_display"].append(f"| Mixed (混合) | {info["port_mixed"]} | HTTP/SOCKS |")
-                  if info["port_http"] != "-": info["ports_display"].append(f"| HTTP | {info["port_http"]} | 仅 HTTP |")
-                  if info["port_socks"] != "-": info["ports_display"].append(f"| SOCKS5 | {info["port_socks"]} | 仅 SOCKS |")
-                  if info["port_redir"] != "-": info["ports_display"].append(f"| Redirect | {info["port_redir"]} | 透明代理 (TCP) |")
-                  if info["port_tproxy"] != "-": info["ports_display"].append(f"| TProxy | {info["port_tproxy"]} | 透明代理 (UDP) |")
-                  if info["port_ctrl"] != "-": info["ports_display"].append(f"| Controller | {info["port_ctrl"]} | 控制面板 |")
-
-                  # 3. 统计信息
+                  # 进阶指标
+                  info["tun"] = "✅ 开启" if safe_get(data, ["tun", "enable"], False) else "🚫 关闭"
+                  
+                  # 数量统计
                   groups = data.get("proxy-groups", [])
-                  info["group_count"] = len(groups) if isinstance(groups, list) else 0
+                  info["group_count"] = len(groups) if groups else 0
                   
                   rules = data.get("rules", [])
-                  info["rule_count"] = len(rules) if isinstance(rules, list) else 0
+                  info["rule_count"] = len(rules) if rules else 0
                   
-                  # 4. 详情提取
+                  # 策略组详情 (用于生成详细报告)
                   info["groups_raw"] = []
-                  if isinstance(groups, list):
-                      for pg in groups:
-                          if isinstance(pg, dict):
-                              name = pg.get("name", "Unknown")
-                              type_ = pg.get("type", "select")
-                              icon = "🚀"
-                              if "auto" in type_ or "url-test" in type_: icon = "♻️"
-                              elif "fallback" in type_: icon = "🔧"
-                              elif "load-balance" in type_: icon = "⚖️"
-                              elif "select" in type_: icon = "👆"
-                              info["groups_raw"].append(f"| {icon} {name} | `{type_}` |")
+                  for pg in groups:
+                      name = pg.get("name", "Unknown")
+                      type_ = pg.get("type", "select")
+                      icon = "🚀"
+                      if "auto" in type_ or "url-test" in type_: icon = "♻️"
+                      elif "fallback" in type_: icon = "🔧"
+                      elif "load-balance" in type_: icon = "⚖️"
+                      elif "select" in type_: icon = "👆"
+                      info["groups_raw"].append(f"| {icon} {name} | `{type_}` |")
 
+                  # DNS 详情
                   info["dns_raw"] = []
                   dns = data.get("dns", {})
-                  if isinstance(dns, dict) and dns.get("enable", False):
-                      nameservers = dns.get("nameserver", [])
-                      if isinstance(nameservers, list):
-                          for ns in nameservers:
-                              if isinstance(ns, str):
-                                  provider = "DoT" if "tls://" in ns else "DoH" if "https://" in ns else "UDP"
-                                  info["dns_raw"].append(f"| {provider} | `{ns}` |")
+                  if dns.get("enable", False):
+                      for ns in dns.get("nameserver", []):
+                          if isinstance(ns, str):
+                              provider = "DoT" if "tls://" in ns else "DoH" if "https://" in ns else "UDP"
+                              info["dns_raw"].append(f"| {provider} | `{ns}` |")
                   
                   return info
               except Exception as e:
-                  print(f"❌ Error parsing {file_path}: {e}")
                   return None
 
           def generate_comparison_table(configs_data):
               """生成横向对比表格"""
-              headers = ["特性 / 文件", "大小"] 
+              # 表头
+              headers = ["特性 / 文件", "大小 (Size)"] 
               for filename in configs_data.keys():
                   headers.append(f"`{filename}`")
               
@@ -180,25 +129,28 @@ jobs:
               lines.append("| " + " | ".join(headers) + " |")
               lines.append("| :--- | :--- " + "| :--- " * len(configs_data) + "|")
               
+              # 定义要对比的行
               rows = [
-                  ("port_mixed", "混合端口 (Mixed)"),
-                  ("port_ctrl", "控制面板 (Ctrl)"),
+                  ("mixed_port", "混合端口"),
                   ("mode", "运行模式"),
                   ("tun", "TUN 模式"),
-                  ("group_count", "策略组数"),
+                  ("ipv6", "IPv6"),
+                  ("allow_lan", "允许局域网"),
+                  ("group_count", "策略组数量"),
                   ("rule_count", "规则条数"),
               ]
 
+              # 填充第一行：文件大小
               size_row = ["**文件大小**", "-"]
               for filename, data in configs_data.items():
-                  # 修复：加上了引号 'file_size'
-                  size_row.append(data.get("file_size", "N/A"))
+                  size_row.append(data["file_size"])
               lines.append("| " + " | ".join(size_row) + " |")
 
+              # 填充其他特性行
               for key, label in rows:
                   row_content = [f"**{label}**", "-"]
                   for filename, data in configs_data.items():
-                      val = data.get("parsed", {}).get(key, "未设置")
+                      val = data.get("parsed", {}).get(key, "N/A")
                       if key in ["group_count", "rule_count"]:
                           val = f"**{val}**"
                       row_content.append(str(val))
@@ -211,31 +163,32 @@ jobs:
               folder_name = os.path.basename(root_path)
               title = DIR_MAP.get(folder_name, folder_name)
 
+              # 1. 扫描并解析所有 YAML
               configs_data = {} 
               valid_yaml_files = []
               
               for f in sorted(files):
                   if f.lower().endswith((".yaml", ".yml")) and f not in IGNORE_FILES:
                       full_path = os.path.join(root_path, f)
-                      print(f"Analyzing: {f}...") 
                       parsed_info = analyze_single_config(full_path)
                       
-                      if parsed_info: 
+                      if parsed_info and (parsed_info["group_count"] > 0 or parsed_info["rule_count"] > 0):
                           configs_data[f] = {
                               "file_size": get_file_size(full_path),
                               "parsed": parsed_info
                           }
                           valid_yaml_files.append(f)
-                      else:
-                          print(f"Skipping {f}: Parse failed.")
 
+              # --- 开始构建 Markdown ---
               content = []
               content.append(f"# 📂 {title}\n")
               
               depth = rel_path.count(os.sep) + 1
               back_link = "../" * depth + "README.md"
               content.append(f"[🔙 返回主页 (Return to Home)]({back_link})\n")
+
               content.append("> 🤖 **自动分析报告** | Auto-generated Report\n")
+              content.append(f"> 本目录包含 **{len(valid_yaml_files)}** 个主要配置文件。\n")
 
               if len(configs_data) > 1:
                   content.append("## ⚔️ 配置横向对比 (Comparison)\n")
@@ -245,47 +198,30 @@ jobs:
               if configs_data:
                   content.append("## 📄 配置文件详解 (Details)\n")
                   for filename, data in configs_data.items():
-                      info = data.get("parsed", {})
-                      
+                      info = data["parsed"]
                       file_url = f"{REPO_URL}/{urllib.parse.quote(rel_path)}/{urllib.parse.quote(filename)}"
                       
                       content.append(f"### 📝 {filename}")
-                      # 修复：加上了引号 'file_size' 和 '未设置'
-                      content.append(f"- **大小**: {data.get('get_file_size', '未设置')}") 
+                      # --- 修复点：这里加上了引号 ---
+                      content.append(f"- **大小**: {data["file_size"]}") 
                       content.append(f"- **链接**: [查看源码]({file_url})")
-
-                      ports_display = info.get("ports_display", [])
-                      listeners_raw = info.get("listeners_raw", [])
                       
-                      if ports_display or listeners_raw:
-                          content.append(f"\n#### 📶 网络端口配置 (Ports)")
-                          content.append("| 类型 | 端口/地址 | 说明 |")
-                          content.append("| :--- | :--- | :--- |")
-                          content.extend(ports_display)
-                          if listeners_raw:
-                              for l in listeners_raw:
-                                  content.append(l)
-                          content.append("\n")
-
-                      groups_raw = info.get("groups_raw", [])
-                      if groups_raw:
-                          group_count = info.get("group_count", 0)
-                          content.append(f"<details>")
-                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({group_count}个)</b></summary>\n")
+                      if info["groups_raw"]:
+                          content.append(f"\n<details>")
+                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({info["group_count"]}个)</b></summary>\n")
                           content.append("| 策略组 (Group) | 类型 (Type) |")
                           content.append("| :--- | :--- |")
-                          content.extend(groups_raw[:15])
-                          if len(groups_raw) > 15:
-                              content.append(f"| ... | 还有 {len(groups_raw)-15} 个 |")
+                          content.extend(info["groups_raw"][:15])
+                          if len(info["groups_raw"]) > 15:
+                              content.append(f"| ... | 还有 {len(info["groups_raw"])-15} 个 |")
                           content.append(f"\n</details>\n")
                       
-                      dns_raw = info.get("dns_raw", [])
-                      if dns_raw:
-                          content.append(f"<details>")
+                      if info["dns_raw"]:
+                          content.append(f"\n<details>")
                           content.append(f"<summary><b>🌐 点击查看 DNS 配置</b></summary>\n")
                           content.append("| 类型 | 服务器 |")
                           content.append("| :--- | :--- |")
-                          content.extend(dns_raw)
+                          content.extend(info["dns_raw"])
                           content.append(f"\n</details>\n")
                       
                       content.append("\n---\n")
@@ -304,10 +240,11 @@ jobs:
           print("Starting Comparison README generation...")
           for root, dirs, files in os.walk("."):
               dirs[:] = [d for d in dirs if d not in IGNORE_DIRS]
+              
               rel_path = os.path.relpath(root, ".")
               if rel_path == ".": continue
-              
-              if len([f for f in files if f not in IGNORE_FILES and f.endswith((".yaml", ".yml"))]) > 0:
+
+              if len([f for f in files if f not in IGNORE_FILES]) > 0:
                   readme_txt = generate_readme(root, files)
                   with open(os.path.join(root, "README.md"), "w", encoding="utf-8") as f:
                       f.write(readme_txt)
@@ -320,6 +257,6 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git add */**/README.md
-          git commit -m "Docs: Fix YAML parsing issues" || echo "No changes to commit"
+          git commit -m "Docs: Auto-generate config comparison tables" || echo "No changes to commit"
           
           git push origin HEAD:${{ github.ref_name }}
